# laoflchDB-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.prod  LAOFLCHDB_USAGE.md  LSQL_USAGE.md  README.md  REST_API.md  TESTING.md  TEST_COVERAGE.md  TEST_REPORT.md  TEST_UPDATE_SUMMARY.md  build.rs  build.sh  debug_scrfd.py  design.md  docker-compose.yml  gRPC_API.md  laoflchdb.yaml  laoflchdb.yaml.bak  local.env  run_all_tests.sh  run_deploy.sh  run_python_tests.sh  run_tests.sh  test_config.yaml  test_lsql.py  test_lsql.sh  test_multi_service.yaml  test_scrfd.py  verify_tests.sh
.cargo/: config.toml
config/: prod.yaml
index_tantivy/: Cargo.toml
index_tantivy/src/: lib.rs
laoflch_db_data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
laoflch_db_data/sys/: 000010.sst  IDENTITY  LOG  LOG.old.1780145736478725  LOG.old.1780222018701309  LOG.old.1780234436366264  MANIFEST-000012
laoflch_db_data_prod/sys/: 000010.sst  000021.sst  000022.sst  000023.sst  IDENTITY  LOG  LOG.old.1780297162604461  LOG.old.1780297661304353  LOG.old.1780300086611510  MANIFEST-000025  OPTIONS-000041  OPTIONS-000043
laoflch_db_index_test/indexes/: 000010.sst  000011.sst  IDENTITY  LOG  LOG.old.1781234873517063  LOG.old.1781235656599130  LOG.old.1781235656631866  LOG.old.1781235800146665  LOG.old.1781235800181310  LOG.old.1781235830548261  LOG.old.1781235830582386  LOG.old.1781235884150452  LOG.old.1781235884186059  LOG.old.1781235908466767  LOG.old.1781235908502787  LOG.old.1781235929401061  LOG.old.1781235929480513  LOG.old.1781235965078103  LOG.old.1781235965137823  LOG.old.1781236021763481  LOG.old.1781236021798350  LOG.old.1781236080816413  LOG.old.1781236080851754  LOG.old.1781236117116460  LOG.old.1781236117150915  LOG.old.1781236144918446  LOG.old.1781236144953303  LOG.old.1781240548931598  LOG.old.1781240548966795  LOG.old.1781241592476302  LOG.old.1781241592512454  LOG.old.1781251789346887  LOG.old.1781251789380807  LOG.old.1781516100772421  LOG.old.1781516137277911  LOG.old.1781516137309568  LOG.old.1781517222219176  LOG.old.1781517222250582  LOG.old.1781517263238381  LOG.old.1781517263269772  (+19 more)
laoflch_db_index_test/sys/: 000010.sst  000011.sst  IDENTITY  LOG  LOG.old.1781233950823791  LOG.old.1781233963239630  LOG.old.1781233963261535  LOG.old.1781234584160532  LOG.old.1781234584186413  LOG.old.1781234756242683  LOG.old.1781234756264501  LOG.old.1781234873453584  LOG.old.1781234873503122  LOG.old.1781235656585551  LOG.old.1781235656619919  LOG.old.1781235800130670  LOG.old.1781235800167277  LOG.old.1781235830531409  (+60 more)
laoflch_hnsw_snapshots/: hnsw_index.ids.cbor  hnsw_index.meta.cbor  hnsw_index.nodes.cbor  hnsw_meta.json
laoflchdb_client/: Cargo.toml  build.rs
laoflchdb_db_engine/: Cargo.toml  build.rs
laoflchdb_embedding_service/: Cargo.toml  build.rs
laoflchdb_embedding_service_proto/: Cargo.toml  build.rs
laoflchdb_engines/: Cargo.toml  build.rs
laoflchdb_engines/proto/: metadata.proto  query.proto
laoflchdb_engines/src/: field.rs  lib.rs  metadata.rs  mod.rs  query.rs  row.rs
laoflchdb_face_service/: Cargo.toml
laoflchdb_face_service/proto/: face_service.proto
laoflchdb_face_service/src/: lib.rs
laoflchdb_face_service_proto/: Cargo.toml  build.rs
laoflchdb_hnsw_service/: Cargo.toml  build.rs
laoflchdb_hnsw_service/proto/: hnsw.proto
laoflchdb_hnsw_service/src/: lib.rs
laoflchdb_image_service/: Cargo.toml  build.rs
laoflchdb_image_service/proto/: image_service.proto
laoflchdb_image_service/src/: lib.rs
laoflchdb_image_service_proto/: Cargo.toml  build.rs
laoflchdb_index_tantivy_engine/: Cargo.toml
laoflchdb_kv_rocksdb_engine/: Cargo.toml
laoflchdb_kv_rocksdb_engine/src/: lib.rs
laoflchdb_object_store_service/: Cargo.toml  build.rs
laoflchdb_object_store_service/proto/: object_store.proto
laoflchdb_object_store_service/src/: lib.rs
laoflchdb_sql_df_engine/: Cargo.toml  README.md
laoflchdb_sql_df_engine/src/: lib.rs
laoflchdb_vector_service/: Cargo.toml  build.rs  gxx_wrapper.sh  nvcc_wrapper.sh
laoflchdb_vector_service/proto/: vector.proto
laoflchdb_vector_service/src/: lib.rs  vision_encoder.rs
laoflchdb_vector_service_proto/: Cargo.toml
lsql/: Cargo.toml  main.rs
ltool/: Cargo.toml
ltool/src/: app.rs  grpc_client.rs  handler.rs  main.rs  path_complete.rs  tab_face.rs  tab_image.rs  tab_index.rs  tab_sql.rs  tab_vector.rs  ui.rs
multi_table_rocksdb/: Cargo.toml  README.md
multi_table_rocksdb/src/: field.rs  lib.rs  multi_table_rocksdb.rs  rocksdb_table.rs  row.rs
proto/: metadata.proto  rpc.proto
scripts/: convert_vision_weights.py  download_vision_models.py  fix_vision_config.py
src/: lib.rs  main.rs
test_detailed_db/: IDENTITY  LOG  MANIFEST-000005
tests/: Cargo.toml  basic_uuid_tests.rs  cli_tests.rs  cross_schema_join_tests.rs  datafusion_debug_test.rs  index_rest_tests.rs  index_service_tests.rs  index_tantivy_integration_tests.rs  init_idempotent_tests.rs  integration_tests.rs  lock_debug_test.rs  lsql_client_tests.rs  permission_tests.rs  prefix_filter_tests.rs  protobuf_tests.rs  rest_tests.rs  run_rest_tests.sh  sql_advanced_tests.rs
tests/unit/: basic_uuid_tests.rs  protobuf_tests.rs
tests_python/: debug_data_format.py  debug_join.py  debug_join_detailed.py  embedding_pb2.py  embedding_pb2_grpc.py  face_service_pb2.py  face_service_pb2_grpc.py  field_pb2.py  field_pb2_grpc.py  grpc_detailed_query_test.py  image_service_pb2.py  image_service_pb2_grpc.py  metadata.proto  metadata_pb2.py  metadata_pb2_grpc.py  object_store_pb2.py  object_store_pb2_grpc.py  query_pb2.py  query_pb2_grpc.py  row_pb2.py  row_pb2_grpc.py  rpc.proto  rpc_pb2.py  rpc_pb2_grpc.py  run_permission_tests.sh  test_cross_schema_join.py  test_data_validation.py  test_e2e_grpc.py  test_e2e_rest.py  test_embedding_service_grpc.py  test_example_schema_sql.py  test_face_service_grpc.py  test_face_service_rest.py  test_final.py  test_grpc_quick.py  test_grpc_simple.py  test_grpc_sql_advanced.py  test_grpc_sql_join.py  test_grpc_sql_query.py  test_image_service_grpc.py  (+20 more)
xtask/: Cargo.toml
(+100 files in other folders)
