[package]
name = "laoflchDB-rust"
version = "0.1.7+09724f48ab62a38eb82d9b8d176b63ea10b62a3d"
edition = "2021"

[[bin]]
name = "laoflchdb"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "lsql",
    "xtask",
    "laoflchdb_engines",
    "multi_table_rocksdb",
    "laoflchdb_sql_df_engine",
    "laoflchdb_index_tantivy_engine", "laoflchdb_vector_service",
]

[dependencies]
laoflchdb_engines = { path = "./laoflchdb_engines" }
multi_table_rocksdb = { path = "./multi_table_rocksdb" }
laoflchdb_sql_df_engine = { path = "./laoflchdb_sql_df_engine" }
laoflchdb_index_tantivy_engine = { path = "./laoflchdb_index_tantivy_engine" }
laoflchdb_vector_service = { path = "./laoflchdb_vector_service" }
rocksdb = { version = "0.50", package = "rust-rocksdb",features=["zstd-static-linking-only"]}
prost = "0.12"
protobuf = "3.7"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
clap = { version = "4.5", features = ["derive"] }
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1"
axum = "0.7"
rustyline = "12.0"
rustc_version_runtime = "0.3"
uuid = { version = "1.0", features = ["v4"] }
snowflake_me = { version = "0.5", features = ["ip-fallback"] }
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"

[features]
cuda = ["laoflchdb_vector_service/cuda"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
tokio-stream = "0.1"
