[package]
name = "laoflchDB-rust"
version = "0.1.9+d9b2f55b92ac6d5ff4329a3cc35cde82df35f522"
edition = "2021"

[[bin]]
name = "laoflchdb"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "lsql",
    "ltool",
    "xtask",
    "laoflchdb_engines",
    "multi_table_rocksdb",
    "laoflchdb_sql_df_engine",
    "laoflchdb_index_tantivy_engine",
    "laoflchdb_vector_service",
    "laoflchdb_kv_rocksdb_engine",
    "laoflchdb_embedding_service",
    "laoflchdb_object_store_service",
    "laoflchdb_image_service",
    "laoflchdb_face_service",
    "laoflchdb_face_service_proto",
    "laoflchdb_client",
    "laoflchdb_image_service_proto",
    "laoflchdb_embedding_service_proto",
]

[dependencies]
laoflchdb_engines = { path = "./laoflchdb_engines" }
multi_table_rocksdb = { path = "./multi_table_rocksdb" }
laoflchdb_sql_df_engine = { path = "./laoflchdb_sql_df_engine" }
laoflchdb_index_tantivy_engine = { path = "./laoflchdb_index_tantivy_engine" }
laoflchdb_vector_service = { path = "./laoflchdb_vector_service" }
laoflchdb_kv_rocksdb_engine = { path = "./laoflchdb_kv_rocksdb_engine" }
laoflchdb_embedding_service = { path = "./laoflchdb_embedding_service" }
laoflchdb_object_store_service = { path = "./laoflchdb_object_store_service" }
laoflchdb_image_service = { path = "./laoflchdb_image_service" }
laoflchdb_face_service = { path = "./laoflchdb_face_service" }
rocksdb = { version = "0.50", package = "rust-rocksdb",features=["zstd-static-linking-only"]}
prost = "0.12"
protobuf = "3.7"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
clap = { version = "4.5", features = ["derive"] }
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1"
axum = "0.7"
rustyline = "12.0"
rustc_version_runtime = "0.3"
uuid = { version = "1.0", features = ["v4"] }
snowflake_me = { version = "0.5", features = ["ip-fallback"] }
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"

[features]
cuda = ["laoflchdb_vector_service/cuda", "laoflchdb_face_service/cuda"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
tokio-stream = "0.1"
