[package]
name = "laoflchdb_engines"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1.6"
prost = "0.12"
protobuf = "3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datafusion = "53.1.0"
arrow = "58.3.0"
arrow-schema = "58.3.0"
arrow-array = "58.3.0"
tokio = { version = "1.0", features = ["rt"] }

[build-dependencies]
prost-build = "0.12"
protobuf-codegen = "3.7"
