[package]
name = "laoflchdb_face_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Proto 定义（抽出的独立 crate，避免 ltool 等纯客户端拉入 ort 等重型依赖）
laoflchdb_face_service_proto = { path = "../laoflchdb_face_service_proto" }
# 图片服务依赖（用于保存对齐后的人脸图片）
laoflchdb_image_service = { path = "../laoflchdb_image_service" }
laoflchdb_object_store_service = { path = "../laoflchdb_object_store_service" }
# 向量索引服务依赖（用于把人脸特征向量写入 HNSW 索引）
laoflchdb_embedding_service = { path = "../laoflchdb_embedding_service" }
# gRPC
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
# ONNX Runtime 推理（替代 candle-onnx）
ort = "=2.0.0-rc.10"
ndarray = "0.16"
# 图片处理
image = "0.24"
# Web 框架
axum = "0.7"
# 序列化与日志
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
# 工具
anyhow = "1.0"
bytes = "1.6"
# Snowflake ID（用于生成保存的人脸图片 key）
snowflake_me = { version = "0.5", features = ["ip-fallback"] }

[features]
# 启用 CUDA GPU 加速（与根 crate 的 cuda feature 联动）
# ort 通过 CUDAExecutionProvider 在运行时启用 CUDA，无需编译时 feature
cuda = []