[package]
name = "laoflchdb_image_service"
version = "0.1.0"
edition = "2021"

[dependencies]
laoflchdb_object_store_service = { path = "../laoflchdb_object_store_service" }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
bytes = "1.6"
# 图片处理：解码/编码/缩放
image = "0.24"

[build-dependencies]
tonic-build = "0.11"
