[package]
name = "laoflchdb_object_store_service"
version = "0.1.0"
edition = "2021"

[dependencies]
laoflchdb_kv_rocksdb_engine = { path = "../laoflchdb_kv_rocksdb_engine" }
laoflchdb_engines = { path = "../laoflchdb_engines" }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"
axum = "0.7"
bytes = "1.6"

[build-dependencies]
tonic-build = "0.11"