[package]
name = "laoflchdb_sql_df_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
laoflchdb_engines = { path = "../laoflchdb_engines" }
datafusion = "53.1.0"
arrow = "58.3.0"
arrow-schema = "58.3.0"
arrow-array = "58.3.0"
tokio = { version = "1.0", features = ["rt"] }
async-trait = "0.1"
protobuf = "3.7"
log = "0.4"