[package]
name = "laoflchdb_vector_service"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "=0.10.2"
laoflchdb_engines = { path = "../laoflchdb_engines" }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"

[features]
cuda = ["candle-core/cuda"]