[package]
name = "lsql"
version = "0.1.7+09724f48ab62a38eb82d9b8d176b63ea10b62a3d"
edition = "2021"
description = "LaoflchDB 交互式 SQL 客户端 (类似 PostgreSQL 的 psql)"

[[bin]]
name = "lsql"
path = "main.rs"

[dependencies]
laoflchDB-rust = { path = ".." }
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
rustyline = "12.0"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"