[package]
name = "lsql"
version = "0.1.8+d5140fe14ce3a9cf61201d3f2b05bc5b663e1d5f"
edition = "2021"
description = "LaoflchDB 交互式 SQL 客户端 (类似 PostgreSQL 的 psql)"

[[bin]]
name = "lsql"
path = "main.rs"

[dependencies]
laoflchDB-rust = { path = ".." }
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
rustyline = "12.0"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"