[package]
name = "lsql"
version = "0.1.9+d9b2f55b92ac6d5ff4329a3cc35cde82df35f522"
edition = "2021"
description = "LaoflchDB 交互式 SQL 客户端 (类似 PostgreSQL 的 psql)"

[[bin]]
name = "lsql"
path = "main.rs"

[dependencies]
laoflchdb_client = { path = "../laoflchdb_client" }
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
rustyline = "12.0"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"