[package]
name = "ltool"
version = "0.1.0"
edition = "2021"
description = "LaoflchDB TUI 客户端 - 图片/人脸/向量/SQL 可视化管理工具"

[[bin]]
name = "ltool"
path = "src/main.rs"

[dependencies]
# 轻量级 gRPC client proto（替代 laoflchDB-rust 主 crate，避免拉入 rocksdb）
laoflchdb_client = { path = "../laoflchdb_client" }
# 各服务的 proto client（轻量级，不拉入后端服务依赖）
laoflchdb_image_service_proto = { path = "../laoflchdb_image_service_proto" }
laoflchdb_embedding_service_proto = { path = "../laoflchdb_embedding_service_proto" }
laoflchdb_face_service_proto = { path = "../laoflchdb_face_service_proto" }
# gRPC
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
# TUI
ratatui = "0.26"
crossterm = "0.27"
# 命令行参数
clap = { version = "4.5", features = ["derive"] }
# 工具
anyhow = "1.0"
log = "0.4"
# 时间格式化
chrono = { version = "0.4", features = ["clock"] }
