[package]
name = "multi_table_rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
laoflchdb_db_engine = { path = "../laoflchdb_db_engine" }
rocksdb = { version = "0.50", package = "rust-rocksdb" }
prost = "0.12"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt"] }
snowflake_me = { version = "0.5", features = ["ip-fallback"] }

[build-dependencies]
prost-build = "0.12"
