[package]
name = "laoflchdb-rust-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
laoflchdb_db_engine = { path = "../laoflchdb_db_engine" }
multi_table_rocksdb = { path = "../multi_table_rocksdb" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tempfile = "3.0"
